--- a/responsive.css
+++ b/responsive.css
@@ -28,7 +28,7 @@
   }
 }
 */
-
+/*
 @media screen and (min-width: 1950px ) { 
   .travel-planner {
     display: flex;
@@ -41,4 +41,5 @@
 
 
 }
+*/
   
