--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Simple CSS reset below */
 *,
 *::before,
-*::after {
+*/*::after*/ {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -28,7 +28,60 @@
   align-items: center;
   
 }
-/*
-  Only your main styles here, any media queries in ./assets/css/responsive.css
-  Card images can be found in ./assets/img/
-*/
+.places {
+  display:flex;
+  border: none;
+  width: 134px;
+  height:60px;
+  left: 121px;
+  top: 106px;
+}
+.places-header {
+  font-family: poppins, sans-serif;
+  font-size:40px ;
+  font-weight:600 ;
+  line-height: 60px;
+  color: black;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+ .img {
+  width: 250px;
+  height: 151px;
+  border-radius: 50px 50px 0px 0px;
+ }
+
+ .card {
+  width: 250px;
+  height: 381px;
+  box-shadow: 0px 1.98px 7.46px  rgba(0,0,0,0.25);
+  border-radius: 50px 50px 50px 50px;
+  margin-bottom: 50px;
+ }
+
+ .text{
+  text-align: center;
+  height: 150px;
+  width: 198.7px;
+  left: 89px;
+  top: 408px;
+
+
+ }
+ .link{
+ text-align: center;
+ padding: 0px 0px 0px 0px;
+ border: 1px solid rgba(36, 23, 23, 0.25);
+ border-radius: 30px;
+ display: flex;
+ justify-content: center;
+ width: 100px;
+ height: auto;
+ 
+ }
