--- a/style.css
+++ b/style.css
@@ -11,10 +11,8 @@
 .travel-planner {
   width: 376px;
   height: 80px;
-  padding: 8px 65.6px 8px 66px  ;
   background-color: white;
-  border-bottom: 3px solid rgba(0,0,0,0.1);
-  position: relative;
+  box-shadow: 0px 0px 7.46px 0px rgba(0,0,0,0.1)
   
 
   /*box-shadow: 0px 0px 7.46px 0px rgba(0,0,0,0.1)*/
@@ -23,9 +21,12 @@
   font-family: poppins, sans-serif;
   font-weight: 600;
   font-size: 32px;
+  width:376px;
   text-align: center;
+  padding: 8px 65.6px 8px 66px;  
   display: flex;
   align-items: center;
+  
   
 }
 .places {
@@ -33,8 +34,7 @@
   border: none;
   width: 134px;
   height:60px;
-  left: 121px;
-  top: 106px;
+  margin: 0px 121px 0px 121px;
 }
 .places-header {
   font-family: poppins, sans-serif;
@@ -44,17 +44,32 @@
   color: black;
   text-align: center;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 .container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0px 63px 0px 63px;
 }
  .img {
   width: 250px;
   height: 151px;
   border-radius: 50px 50px 0px 0px;
+ }
+ .subtitle {
+  font-family: poppins, sans-serif;
+  font-size: 20px;
+  font-weight:600;
+  left:63px;
+  top: 376.66px;
+  width: 250px;
+  padding: 0px 70px 0px 75px;
+  display: flex;
+  align-items: centre;
+  justify-content: centre;
+  text-align: center;
  }
 
  .card {
@@ -64,24 +79,29 @@
   border-radius: 50px 50px 50px 50px;
   margin-bottom: 50px;
  }
-
+ 
  .text{
   text-align: center;
-  height: 150px;
-  width: 198.7px;
-  left: 89px;
+  height: 140px;
+  width: 240px;
   top: 408px;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
  }
  .link{
- text-align: center;
- padding: 0px 0px 0px 0px;
+ box-sizing:border-box;
  border: 1px solid rgba(36, 23, 23, 0.25);
  border-radius: 30px;
+ width: 156px;
+ height: 43px;
+ padding: 10px 8px 10px 8px;
+ margin: 0px 39px 12px 44px;
  display: flex;
  justify-content: center;
- width: 100px;
- height: auto;
+ text-align: center;
+ 
+ 
  
  }
