--- a/responsive.css
+++ b/responsive.css
@@ -1,11 +1,209 @@
-/*@media (max-width: 1220px) {
-  section.card--container {
-    flex-wrap: wrap;
-  }
+@media screen and (max-width: 2400px) {
+.travel-planner {
+width: 1000px;
+height: 100px;
+background-color: white;
+box-shadow: 0px 0px 7.46px 0px rgba(0,0,0,0.1);
+display: flex;
+justify-content: flex-end;
 }
 
-@media (max-width: 768px) {
-  header #logo {
+.logo {
+font-family: poppins, sans-serif;
+font-weight: 600;
+font-size: 32px;
+width:1920px;
+text-align: right;
+padding: 8px 30px 8px 1590px;  
+position:relative;
+}
+
+.places {
+display:flex;
+border: none;
+width: 134px;
+height:60px;
+margin: 0px 1637px 0px 70px;
+}
+.places-header {
+font-family: poppins, sans-serif;
+font-size:40px ;
+font-weight:600 ;
+line-height: 60px;
+color: black;
+text-align: centre;
+display: flex;
+justify-content: flex-start;
+align-items: center;
+}
+.container {
+width: 1920px;
+height: 1080px;
+display: inline-block;
+margin: 0px 63px 0px 63px;  
+  }
+
+.img {
+width: 250px;
+height: 151px;
+border-radius: 50px 50px 0px 0px;
+}
+.subtitle {
+font-family: poppins, sans-serif;
+font-size: 20px;
+font-weight:600;
+left:63px;
+top: 376.66px;
+width: 250px;
+padding: 0px 70px 0px 75px;
+display: flex;
+align-items: centre;
+justify-content: centre;
+text-align: center;
+}
+
+.card {
+max-width: 390px;
+max-height: 620px;
+box-shadow: 0px 1.98px 7.46px  rgba(0,0,0,0.25);
+border-radius: 50px 50px 50px 50px;
+margin-bottom: 50px;
+display: flex;
+flex-direction: row;
+}
+
+.text{
+text-align: center;
+height: 140px;
+width: 240px;
+top: 408px;
+display: flex;
+justify-content: center;
+align-items: center;
+
+}
+.link{
+box-sizing:border-box;
+border: 1px solid rgba(36, 23, 23, 0.25);
+border-radius: 30px;
+width: 156px;
+height: 43px;
+padding: 10px 8px 10px 8px;
+margin: 0px 39px 12px 44px;
+display: flex;
+justify-content: center;
+text-align: center;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*@media (max-width: 768px) { .travel-planner {
+  width: 376px;
+  height: 80px;
+  background-color: white;
+  box-shadow: 0px 0px 7.46px 0px rgba(0,0,0,0.1)
+  
+}
+.logo {
+  font-family: poppins, sans-serif;
+  font-weight: 600;
+  font-size: 32px;
+  width:376px;
+  text-align: center;
+  padding: 8px 65.6px 8px 66px;  
+  display: flex;
+  align-items: center;
+  
+  
+}
+.places {
+  display:flex;
+  border: none;
+  width: 134px;
+  height:60px;
+  margin: 0px 121px 0px 121px;
+}
+.places-header {
+  font-family: poppins, sans-serif;
+  font-size:40px ;
+  font-weight:600 ;
+  line-height: 60px;
+  color: black;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0px 63px 0px 63px;
+}
+ .img {
+  width: 250px;
+  height: 151px;
+  border-radius: 50px 50px 0px 0px;
+ }
+ .subtitle {
+  font-family: poppins, sans-serif;
+  font-size: 20px;
+  font-weight:600;
+  left:63px;
+  top: 376.66px;
+  width: 250px;
+  padding: 0px 70px 0px 75px;
+  display: flex;
+  align-items: centre;
+  justify-content: centre;
+  text-align: center;
+ }
+
+ .card {
+  width: 250px;
+  height: 381px;
+  box-shadow: 0px 1.98px 7.46px  rgba(0,0,0,0.25);
+  border-radius: 50px 50px 50px 50px;
+  margin-bottom: 50px;
+ }
+ 
+ .text{
+  text-align: center;
+  height: 140px;
+  width: 240px;
+  top: 408px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+ }
+ .link{
+ box-sizing:border-box;
+ border: 1px solid rgba(36, 23, 23, 0.25);
+ border-radius: 30px;
+ width: 156px;
+ height: 43px;
+ padding: 10px 8px 10px 8px;
+ margin: 0px 39px 12px 44px;
+ display: flex;
+ justify-content: center;
+ text-align: center;
+ }
+}
+
+
+ /* header #logo {
     margin: 0 auto;
   }
 
@@ -16,10 +214,105 @@
   article.card {
     width: 350px;
   }
-}
+}*/
 
-@media (max-width: 480px) {
-  section.card--container {
+/*@media (max-width: 480px) {.body {
+  margin:auto;
+  }
+  .travel-planner {
+  width: 376px;
+  height: 80px;
+  background-color: white;
+  box-shadow: 0px 0px 7.46px 0px rgba(0,0,0,0.1)
+  
+}
+.logo {
+  font-family: poppins, sans-serif;
+  font-weight: 600;
+  font-size: 32px;
+  width:376px;
+  text-align: center;
+  padding: 8px 65.6px 8px 66px;  
+  display: flex;
+  align-items: center;
+  
+  
+}
+.places {
+  display:flex;
+  border: none;
+  width: 134px;
+  height:60px;
+  margin: 0px 121px 0px 121px;
+}
+.places-header {
+  font-family: poppins, sans-serif;
+  font-size:40px ;
+  font-weight:600 ;
+  line-height: 60px;
+  color: black;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0px 63px 0px 63px;
+}
+ .img {
+  width: 250px;
+  height: 151px;
+  border-radius: 50px 50px 0px 0px;
+ }
+ .subtitle {
+  font-family: poppins, sans-serif;
+  font-size: 20px;
+  font-weight:600;
+  left:63px;
+  top: 376.66px;
+  width: 250px;
+  padding: 0px 70px 0px 75px;
+  display: flex;
+  align-items: centre;
+  justify-content: centre;
+  text-align: center;
+ }
+
+ .card {
+  width: 250px;
+  height: 381px;
+  box-shadow: 0px 1.98px 7.46px  rgba(0,0,0,0.25);
+  border-radius: 50px 50px 50px 50px;
+  margin-bottom: 50px;
+ }
+ 
+ .text{
+  text-align: center;
+  height: 140px;
+  width: 240px;
+  top: 408px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+ }
+ .link{
+ box-sizing:border-box;
+ border: 1px solid rgba(36, 23, 23, 0.25);
+ border-radius: 30px;
+ width: 156px;
+ height: 43px;
+ padding: 10px 8px 10px 8px;
+ margin: 0px 39px 12px 44px;
+ display: flex;
+ justify-content: center;
+ text-align: center;
+ }
+}
+  /*section.card--container {
     padding: 0 1vw
   }
   
@@ -28,7 +321,7 @@
   }
 }
 */
-/*
+/*my flop idea
 @media screen and (min-width: 1950px ) { 
   .travel-planner {
     display: flex;
