--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 }
 /* Header style start*/
 .travel-planner {
-  width: 376px;
-  height: 80px;
+  min-width: 376px;
+  min-height: 80px;
   background-color: white;
   box-shadow: 0px 0px 7.46px 0px rgba(0,0,0,0.1)
   
@@ -99,7 +99,4 @@
  display: flex;
  justify-content: center;
  text-align: center;
- 
- 
- 
  }
